--- a/src/components/community/aq-community-previewpost.html
+++ b/src/components/community/aq-community-previewpost.html
@@ -2,7 +2,6 @@
 <link rel="import" href="../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="../../../bower_components/paper-button/paper-button.html">
 
-<!--<link rel="import" href="../aq-markdown-editor.html">-->
 <link rel="import" href="../aq-html-editor.html">
 <link rel="import" href="./aq-community-postdetail-header.html">
 <link rel="import" href="./aq-community-postdetail-content.html">
@@ -26,13 +25,17 @@
         }
 
         paper-button {
-            border: 1px solid #24293d;
+            /*border: 1px solid #24293d;*/
             height:30px;
             font-size: 13px;
         }
 
         #buttons{
-            margin-bottom: 10px;
+            margin-bottom: 30px;
+            margin-top: 30px;
+        }
+        aq-community-postdetail-header{
+            margin-top: 30px;
         }
 
     </style>
