1. Fixed some issues with sauravB's code 2. SIde-bar is now behaves as in narrow layout

--- a/src/components/analyze/aq-analyze-home-backtest-item2.html
+++ b/src/components/analyze/aq-analyze-home-backtest-item2.html
@@ -166,7 +166,7 @@
                     </li>
                     <li class="text-label">Date Range: <span class="text-content">[[processedBacktest.startDate]] - [[processedBacktest.endDate]]</span>
                     </li>
-                    <li class="text-label">Running Time:<span class="text-content">52s</span></li>
+                    <!--li class="text-label">Running Time:<span class="text-content">52s</span></li-->
                     <li class="text-label">Status:<span class="text-content">[[processedBacktest.status]]</span></li>
                     <li class="text-label">Information Ratio:<span class="text-content">20.5%</span></li>
                 </ul>
